# taskpilot

./: .env.example  Dockerfile.api  LICENSING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/pricing/: index.html
frontend/: index.html  landing.html
frontend/static/: app.js  style.css
scripts/: export_public.sh
src/taskpilot/: __init__.py  app.py  cli.py  core.py  engine.py  licensing.py  persistence.py  service.py  workflows.py
src/taskpilot/autonomy/: __init__.py  dependency_resolver.py  failure_predictor.py  resource_allocator.py  schedule_optimizer.py
src/taskpilot/performance/: __init__.py  async_pipeline.py  batch_scheduler.py  cache.py  priority_optimizer.py
src/taskpilot/revenue/: __init__.py  automation_upsell.py  priority_queue.py  team_collaboration.py
tests/: conftest.py  test_cli.py  test_license_gate_taskpilot.py  test_task_scheduling_edge_cases.py
tests/unit/: test_app.py  test_automation_upsell.py  test_autonomy.py  test_licensing.py  test_performance.py  test_persistence.py  test_priority_queue.py  test_service.py  test_team_collaboration.py
